# IMCA_Individual

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
apis/: admin.py  apps.py  models.py  runscheduler.py  serializers.py  urls.py  views.py
bigreviews/: admin.py  models.py  serializers.py  urls.py  views.py
bigreviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
boxapi/: models.py  operator.py  urls.py  views.py
boxapi/migrations/: 0001_initial.py
calenders/: admin.py  models.py  serializers.py  urls.py  views.py
calenders/migrations/: 0001_initial.py  0002_initial.py
common/: serializers.py
community_boards/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
community_boards/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
nginx/: Dockerfile  default.conf
reports/: admin.py  models.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_initial.py
reviews/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
youtube_videos/: admin.py  models.py  serializers.py  views.py
youtube_videos/migrations/: 0001_initial.py
